Enhance shell configuration and installation script
- Updated .aliases with additional navigation and development tool shortcuts.
- Added user information to .gitconfig.
- Improved .zshrc with enhanced history management, plugins, and key bindings.
- Revamped install.sh to provide a complete setup for development environment, including OS detection, package manager installation, and modern CLI tools.

--- a/env/.gitconfig
+++ b/env/.gitconfig
@@ -1,3 +1,6 @@
+[user]
+    name = Ben Baryo
+    email = 19845603+ctrl-escp@users.noreply.github.com
 [core]
     autocrlf = input
     sshCommand = ssh
